Added circular buffer for TCP socket receive

--- a/lib/lib_tcp_ipc/Makefile
+++ b/lib/lib_tcp_ipc/Makefile
@@ -1,15 +1,15 @@
 CC ?= $(CROSS-COMPILE)gcc
 CFLAGS ?= -g -Wall -Werror
 TARGET ?=
-LDFLAGS ?=
+LDFLAGS ?= -lpthread
 
 all: server client
 
-server: server.c
-	$(CC) $(CFLAGS) -o server server.c $(LDFLAGS)
+server: ipc_server.c ipc_cb_fifo.c
+	$(CC) $(CFLAGS) -o server ipc_server.c ipc_cb_fifo.c $(LDFLAGS)
 
-client: client.c
-	$(CC) $(CFLAGS) -o client client.c $(LDFLAGS)
+client: ipc_client.c ipc_cb_fifo.c
+	$(CC) $(CFLAGS) -o client ipc_client.c ipc_cb_fifo.c $(LDFLAGS)
 
 clean:
 	rm -f server client *.o *.elf *.map *.out
