--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "ipc_common.h": "c",
         "inet.h": "c",
         "ipc_client.h": "c",
-        "ipc_server.h": "c"
+        "ipc_server.h": "c",
+        "stdlib.h": "c"
     }
 }
