Restructured and simplified tcpipc shared library code
 Updates:
 * Makefile for compiling libtcpipc.so
 * Library can be used as both TCP server and client
 * Modified pingpong game for updated calls in libtcpipc

 Issues:
 * Score is not updated on Client
 * Slight offset in opponent's pad position

--- a/app/ping-pong/Makefile
+++ b/app/ping-pong/Makefile
@@ -1,13 +1,22 @@
 CC ?= $(CROSS-COMPILE)gcc
 CFLAGS ?= -g -Wall -Werror
-TARGET ?= pingpong
-LDFLAGS ?= -lncurses -lpthread
-SOURCE = main.c ipc_cb_fifo.c ipc_common.c ipc_server.c ipc_client.c
+TARGET = pingpong
+
+TCPIPC_DIR=../../lib/libtcpipc/
+INCLUDES ?= -I$(TCPIPC_DIR)
+LDIR ?= -L$(TCPIPC_DIR)
+LIBS ?= -lncurses -lpthread -ltcpipc
+
+SRCS = pingpong.c
+OBJS = $(SRCS:.c=.o)
 
 all: $(TARGET)
 
-$(TARGET): $(SOURCE)
-	$(CC) $(CFLAGS) -o $(TARGET) $(SOURCE) $(LDFLAGS)
+$(TARGET): $(OBJS)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS) $(LDIR) $(LIBS)
+
+$(OBJS): $(SRCS)
+	$(CC) $(CFLAGS) $(INCLUDES) -c $(SRCS)
 
 clean:
-	rm -f $(TARGET) *.o *.elf *.map *.out
+	rm -f $(TARGET) *.so *.o *.elf *.map *.out
