Handled the case when players launch the game at different window resolutions
Updates:
 * Fixed the opponent's pad offset issue
 * Fixed score update issue on client side

Known issues:
 * Sometimes client game does not launch until next sync msg is sent
 * Occasionally scores fail to sync on client game

--- a/lib/libtcpipc/Makefile
+++ b/lib/libtcpipc/Makefile
@@ -2,7 +2,7 @@ CC ?= $(CROSS-COMPILE)gcc
 CFLAGS ?= -g -Wall -Werror -shared -fPIC
 TARGET = libtcpipc.so
 
-LIBS ?= -lpthread -ltcpipc
+LIBS ?= -lpthread
 
 SRCS = tcpipc.c tcpipc_cb_fifo.c
 OBJS = $(SRCS:.c=.o)
