--- a/lib/libtcpipc/Makefile
+++ b/lib/libtcpipc/Makefile
@@ -5,7 +5,15 @@ TARGET = libtcpipc.so
 SRCS = tcpipc.c tcpipc_cb_fifo.c
 OBJS = $(SRCS:.c=.o)
 
+ifeq ($(PREFIX),)
+	PREFIX := /usr/local
+endif
+
 all: $(TARGET)
+
+install: $(TARGET)
+	install -m 644 $(TARGET) $(PREFIX)/lib/
+	install -m 644 tcpipc.h $(PREFIX)/include/
 
 $(TARGET): $(OBJS)
 	$(CC) $(CFLAGS) -shared -o $(TARGET) $(OBJS)
