--- a/lib/libtcpipc/Makefile
+++ b/lib/libtcpipc/Makefile
@@ -6,7 +6,7 @@ SRCS = tcpipc.c tcpipc_cb_fifo.c
 OBJS = $(SRCS:.c=.o)
 
 ifeq ($(PREFIX),)
-	PREFIX := /usr/local
+	PREFIX := /usr
 endif
 
 all: $(TARGET)
